implemented methods to test structure of date and to assign type

--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -45,6 +45,8 @@
 
 				console.log("element '0' of received data: " + JSONToString(data["0"]));
 
+				console.log((data["0"]["LEVEL0RECORD"])*2.5);
+
 				lastReceivedData = data;
 			}
 
