--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -3,6 +3,25 @@
 	<head>
 		<meta charset="utf-8"></meta>
 		<title>D3Test</title>
+		<style>
+			svg {
+				background-color: beige;
+			}
+			html{
+				height: 100%;
+			}
+			body {
+				height: 95%;	/*
+						this is an emperical value, that fills the page
+						almost completely and avoids scroll bars. (firefox)
+						TODO: What is the reason?
+						*/
+			}
+			svg {
+				width: 100%;
+				height: 100%;
+			}
+		</style>
 		<script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script>
 		<script type="text/javascript" src="./infovis.js"></script>
 		<script type="text/javascript">
@@ -13,51 +32,32 @@
 
 				removeMessageOfUnavailabilityOfJavaScript();
 
-				if(isD3Available()){
+				var gate = window[GATE_ANNOUNCEMENT_NAME];
+				if(gate != undefined){
 
-					setUpSampleSVG();
-
-					if(isQtPresent()){
-
-						setUpEventPassingFromQtToJS();
-						setUpEventPassingFromJSToQt();
-					}
-					else{
-
-						console.warn("Qt is not present.");
-					}
-				}
-				else{
-
-					console.warn("d3.js is not available. Execution was canceled.");
-				}
-
-				if(window[GATE_ANNOUNCEMENT_NAME] != undefined){
-
-					window[GATE_ANNOUNCEMENT_NAME].transferredData.connect(onTransferredData);
+					// connect slots
+					gate.transferredData.connect(onTransferredData);
 				}
 				else{
 
 					console.warn("'gate' is not present");
 				}
+
+				if(isD3Available()){
+
+					window.testCanvas = new infovis.Canvas("#viz");
+				}
 			}
 
 			function onTransferredData(values, metaDataRelation, baseDataIndices){
 
-				console.log(values);
-				console.log(metaDataRelation);
-				console.log(baseDataIndices);
-
 				window.factory = new infovis.DataAccessorFactory(values, metaDataRelation);
-				console.log(factory);
-				window.baseDataIndices = baseDataIndices;
 				window.testAccessor = factory.makeAccessorFrom(baseDataIndices);
-				console.log(testAccessor);
 
-				console.log(testAccessor[0].access());
-				console.log(testAccessor[0].access("Logger"));
-				console.log(testAccessor[0].meta().access());
-				console.log(testAccessor[0].meta("name").access());
+				// TODO: select dimensions
+				// TODO: select subset of data
+
+				// TODO: create diagram object
 			}
 
 			function onClick(){
@@ -67,9 +67,9 @@
 
 		</script>
 	</head>
-	<body onload="onLoad()" onclick="onClick()">
+	<body onload="onLoad()" onclick="onClick()"">
 		<div id="viz">
-				<p id="javaScriptNotExecutedDummy">JavaScript was not executed</p>
+				<p id="javaScriptNotAvailableDummy">JavaScript was not available</p>
 		</div>
 	</body>
 </html>
