--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -17,10 +17,10 @@
 						TODO: What is the reason?
 						*/
 			}
-			svg {
+			/*svg {
 				width: 100%;
 				height: 100%;
-			}
+			}*/
 		</style>
 		<script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script>
 		<script type="text/javascript" src="./infovis.js"></script>
@@ -45,19 +45,62 @@
 
 				if(isD3Available()){
 
-					window.testCanvas = new infovis.LineDiagram("#viz");
+				//	window.testCanvas = new infovis.LineDiagram("#viz");
 				}
 			}
 
 			function onTransferredData(values, metaDataRelation, baseDataIndices){
 
 				window.factory = new infovis.DataAccessorFactory(values, metaDataRelation);
+				window.baseDataIndices = baseDataIndices;
 				window.testAccessor = factory.makeAccessorFrom(baseDataIndices);
 
 				// TODO: select dimensions
 				// TODO: select subset of data
 
 				// TODO: create diagram object
+			}
+
+			function extractCategory(category, accessor) {
+				var result;
+
+				// accessor.forEach(functor, { iterator: new TopLevelIterator(), applyToArrayElements: true });
+				var index = -1;
+				var firstLineAccessor = accessor.at(0);
+
+				firstLineAccessor.forEach(
+					function(elementAccessor, descendingIndex){
+						if(index == -1){
+							var matched = elementAccessor.meta("name").access() == category;
+							if(matched){
+								index = descendingIndex[0];
+							}
+						}
+					}
+				);
+
+				result = accessor.split().map(
+					function(rowAccessor){
+						return rowAccessor.at(index).access();
+					}
+				);
+
+				return result;
+			}
+
+			function extractTestData(accessor){
+
+				var xValues = extractCategory("TimestampMeasurement", accessor);
+				var yValues = extractCategory("DevicesTemperaturedatalogger0mSingle_value15Min", accessor);
+
+				return xValues.map(
+					function(_, index){
+						return {
+							x: xValues[index],
+							y: yValues[index]
+						};
+					}
+				);
 			}
 
 			function onClick(){
