implemented iterator for DataAccessor - infovis.js: implemented abstract iterator and inorder iterator - D3Test.html: tiny correction

--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -110,7 +110,7 @@
 
 		</script>
 	</head>
-	<body onload="onLoad()" onclick="onClick()"">
+	<body onload="onLoad()" onclick="onClick()">
 		<div id="viz">
 				<p id="javaScriptNotAvailableDummy">JavaScript was not available</p>
 		</div>
