--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -66,7 +66,7 @@
 				var indexOfCategory = exampleRow.indexOf(
 					function(elementAccessor, descendingIndex){
 
-						return elementAccessor.meta("name").access() == category;
+						return elementAccessor.meta("column").meta("column_element_name").access() == category;
 					}
 				)
 
