extracted inheritance mechanism from infovis.js

--- a/Applications/DataExplorer/InfoVis/D3Test.html
+++ b/Applications/DataExplorer/InfoVis/D3Test.html
@@ -23,6 +23,7 @@
 			}*/
 		</style>
 		<script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script>
+		<script type="text/javascript" src="./inheritance.js"></script>
 		<script type="text/javascript" src="./infovis.js"></script>
 		<script type="text/javascript">
 
